--- a/login.html
+++ b/login.html
@@ -179,7 +179,7 @@
         </div>
         </form>
         <p>Informasi Penerimaan Siswa & Santri Baru <br>
-            Kunjungi Media Kami di <a href="https://youtube.com/c/SahabatMoeka/about" class="link" target="_blank">@sahabatmoeka</a>
+            Kunjungi Media Kami di <a href="https://berbagi.link/sahabatmoeka" class="link" target="_blank">@sahabatmoeka</a>
             <a href="http://ppdb.smkmuhkarangmojo.sch.id" target="_blank" class="link">www.ppdb.smkmuhkarangmojo.sch.id</a>
         </p>
         <img src="img/wifi.png" alt="Logo Wi-Fi" class="wifi-logo" width="40">
