--- a/logout.html
+++ b/logout.html
@@ -4,93 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="img/moeka.png" type="image/x-icon">
+    <meta http-equiv="pragma" content="no-cache">
+    <meta http-equiv="expires" content="-1">
+
     <title>Hotspot @sahabatmoeka</title>
-    <style>
-        html {
-            height: 100%;
-            background-image: url('img/bg.jpg');
-            background-size: cover;
-            background-repeat: no-repeat;
-            background-position: center;
-        }
-        body {
-            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-            width: 100%;
-            margin: 0;
-            padding: 0;
-        }
-        section {
-            width: 350px;
-            position: relative;
-            margin-top: 2rem;
-            left: 50%;
-            transform: translate(-50%, 0);            
-        }
-        .img-title{
-            width: 100%;
-        }
-
-        .content{
-            margin-top: -3.5rem;
-            width: 80%;
-            background-color: #DCA393;
-            border-radius: 175px 175px 0 0;
-            display: block;
-            margin-left: auto;
-            margin-right: auto;
-            padding-bottom: 1rem;
-        }
-
-        .img-logo{
-            width: 90%;
-            padding-top: 1rem;
-            display: block;
-            margin-left: auto;
-            margin-right: auto;
-        }
-        .sub-title{
-            text-align: center;
-            color: #214194;
-            padding: 0;
-            margin: 2px;
-            font-weight: bold;
-        }
-        table{
-            width: 90%;
-            padding: 2px;
-            display: block;
-            margin-left: auto;
-            margin-right: auto;
-            border-collapse: collapse;
-            color: #214194;
-        }
-        .button {
-            width: 225px;
-            padding: 0.8rem;
-            background-color: #C9E265;
-            color: #214194;
-            font-weight: bold;
-            border: none;
-            border-radius: 10px;
-            margin-left: auto;
-            margin-right: auto;
-            margin-top: 1rem;
-            display: block;
-            cursor: pointer;
-        }
-
-    </style>
+    
+    <link rel="shortcut icon" href="img/moeka.png" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
+    
     <script>
         function openLogin() {
-        if (window.name != 'hotspot_logout') return true;
-        open('$(link-login)', '_blank', '');
-        window.close();
-        return false;
+            if (window.name != 'hotspot_logout') return true;
+            open('$(link-login)', '_blank', '');
+            window.close();
+            return false;
         }
     </script>
 </head>
-<body $(if advert-pending == 'yes') onLoad="openAdvert()" $(endif)>
+<body>
     <section>
         <img src="img/title.png" alt="Sahabat Moeka" class="img-title">
         <div class="content">
