Update & Fix Bug/Error

--- a/error.html
+++ b/error.html
@@ -14,14 +14,27 @@
     
 </head>
 <body>
+    <img src="img/aksesoris.png" alt="aksesoris" class="aksesoris1">
+    <img src="img/aksesoris.png" alt="aksesoris" class="aksesoris2">
     <section>
         <img src="img/title.png" alt="Sahabat Moeka" class="img-title">
         <div class="content">
+            <img src="img/garis-oval.png" alt="Oval" class="bg-garis">
             <img src="img/moeka.png" alt="Logo Moeka" class="img-logo">
             <h3 class="sub-title">Hotspot error!</h3>
             <p>$(error)</p>
             <a href="$(link-login)" class="login">Login</a>
         </div>
     </section>
+    <p>
+        Informasi Penerimaan Siswa & Santri Baru<br>
+        Tahun Pelajaran <span id="tp"></span>, Kunjungi Media Kami di:<br>
+        <a href="https://berbagi.link/sahabatmoeka" class="link" target="_blank">@sahabatmoeka</a><br>
+        <a href="http://ppdb.smkmuhkarangmojo.sch.id" target="_blank" class="link">www.ppdb.smkmuhkarangmojo.sch.id</a>
+    </p>
+    <img src="img/wifi.png" alt="Logo Wi-Fi" class="wifi-logo" width="40">
+
+    <script src="jquery.min.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
