--- a/status.html
+++ b/status.html
@@ -15,82 +15,6 @@
     <link rel="shortcut icon" href="img/moeka.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 
-    <style>
-        /* html {
-            height: 100%;
-            background-color: #214194;
-            background-image: url('img/bg.jpg');
-            background-size: cover;
-            background-repeat: no-repeat;
-            background-position: center;
-        }
-        body {
-            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-            width: 100%;
-            margin: 0;
-            padding: 0;
-        }
-        section {
-            width: 350px;
-            position: relative;
-            margin-top: 2rem;
-            left: 50%;
-            transform: translate(-50%, 0);            
-        }
-        .img-title{
-            width: 100%;
-        }
-
-        .content{
-            margin-top: -3.5rem;
-            width: 80%;
-            background-color: #DCA393;
-            border-radius: 175px 175px 0 0;
-            display: block;
-            margin-left: auto;
-            margin-right: auto;
-            padding-bottom: 1rem;
-        }
-
-        .img-logo{
-            width: 90%;
-            padding-top: 1rem;
-            display: block;
-            margin-left: auto;
-            margin-right: auto;
-        }
-        .sub-title{
-            text-align: center;
-            color: #214194;
-            padding: 0;
-            margin: 2px;
-            font-weight: bold;
-        }
-        table{
-            width: 90%;
-            padding: 2px;
-            display: block;
-            margin-left: auto;
-            margin-right: auto;
-            border-collapse: collapse;
-            color: #214194;
-        }
-        .button {
-            width: 225px;
-            padding: 0.8rem;
-            background-color: #f43838;
-            color: #ffffff;
-            font-weight: bold;
-            border: none;
-            border-radius: 10px;
-            margin-left: auto;
-            margin-right: auto;
-            margin-top: 1rem;
-            display: block;
-            cursor: pointer;
-        } */
-
-    </style>
     <script>
         $(if advert-pending == 'yes')
             var popup = '';
@@ -111,9 +35,12 @@
         </script>
 </head>
 <body $(if advert-pending == 'yes') onLoad="openAdvert()" $(endif)>
+    <img src="img/aksesoris.png" alt="aksesoris" class="aksesoris1">
+    <img src="img/aksesoris.png" alt="aksesoris" class="aksesoris2">
     <section>
         <img src="img/title.png" alt="Sahabat Moeka" class="img-title">
         <div class="content">
+            <img src="img/garis-oval.png" alt="Oval" class="bg-garis">
             <form action="$(link-logout)" name="logout" onSubmit="return openLogout()">
             <img src="img/moeka.png" alt="Logo Moeka" class="img-logo">
             <h3 class="sub-title">Wi-Fi Status</h3>
@@ -151,5 +78,15 @@
             </form>
         </div>
     </section>
+    <p>
+        Informasi Penerimaan Siswa & Santri Baru<br>
+        Tahun Pelajaran <span id="tp"></span>, Kunjungi Media Kami di:<br>
+        <a href="https://berbagi.link/sahabatmoeka" class="link" target="_blank">@sahabatmoeka</a><br>
+        <a href="http://ppdb.smkmuhkarangmojo.sch.id" target="_blank" class="link">www.ppdb.smkmuhkarangmojo.sch.id</a>
+    </p>
+    <img src="img/wifi.png" alt="Logo Wi-Fi" class="wifi-logo" width="40">
+
+    <script src="jquery.min.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
