--- a/status.html
+++ b/status.html
@@ -13,7 +13,8 @@
     <title>Hotspot Status</title>
     
     <link rel="shortcut icon" href="img/moeka.png" type="image/x-icon">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css">
 
     <script>
         $(if advert-pending == 'yes')
@@ -35,58 +36,76 @@
         </script>
 </head>
 <body $(if advert-pending == 'yes') onLoad="openAdvert()" $(endif)>
-    <img src="img/aksesoris.png" alt="aksesoris" class="aksesoris1">
-    <img src="img/aksesoris.png" alt="aksesoris" class="aksesoris2">
-    <section>
-        <img src="img/title.png" alt="Sahabat Moeka" class="img-title">
-        <div class="content">
-            <img src="img/garis-oval.png" alt="Oval" class="bg-garis">
-            <form action="$(link-logout)" name="logout" onSubmit="return openLogout()">
-            <img src="img/moeka.png" alt="Logo Moeka" class="img-logo">
-            <h3 class="sub-title">Wi-Fi Status</h3>
-            <table>
-                <tr>
-                    <td>Username</td>
-                    <td>:</td>
-                    <td>
-                        $(if login-by == 'trial')
-                        Trial User
-                        $(elif login-by != 'mac')
-                        $(username)
-                        $(endif)
-                    </td>
-                </tr>
-                <tr>
-                    <td>IP Address</td>
-                    <td>:</td>
-                    <td>$(ip)</td>
-                </tr>
-                <tr>
-                    <td>up/down</td>
-                    <td>:</td>
-                    <td>$(bytes-in-nice) / $(bytes-out-nice)</td>
-                </tr>
-                <tr>
-                    <td>uptime/left</td>
-                    <td>:</td>
-                    <td>$(uptime) / $(session-time-left)</td>
-                </tr>
-            </table>
-            $(if login-by-mac != 'yes')
-            <button type="submit" class="button bg-danger">Logout</button>
-            $(endif)
-            </form>
+    <section class="py-4">
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <div class="box-header">
+                        <img src="img/title.png" alt="Sahabat Moeka" class="img-header">
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <div class="content position-relative">
+                        <img src="img/garis-oval2.png" alt="Oval" class="position-absolute top-50 start-50 translate-middle img-oval px-2">
+                        <div class="box-logo">
+                            <img src="img/moeka.png" alt="Logo Moeka" class="img-logo">
+                        </div>
+                        <div class="box-form">
+                            <h6 class="fw-bold">Hotspot Status</h6>
+                            <div class="box-input">
+                                $(if login-by == 'trial')
+                                    <h6>Hi, trial user!</h6>
+                                $(elif login-by != 'mac')
+                                    <h6>Hi, $(username)!</h6>
+                                $(endif)                
+
+                                <form action="$(link-logout)" name="logout" onSubmit="return openLogout()">
+                                    <table class="table table-sm table-borderless w-100">
+                                        <tr><td>IP</td><td>$(ip)</td></tr>
+                                        <tr><td>Up/Down</td><td>$(bytes-in-nice)/$(bytes-out-nice)</td></tr>
+                                    $(if session-time-left)
+                                        <tr><td>Connected/left</td><td>$(uptime)/$(session-time-left)</td></tr>
+                                    $(else)
+                                        <tr><td>Connected</td><td>$(uptime)</td></tr>
+                                    $(endif)
+                                    $(if blocked == 'yes')
+                                        <tr><td>Status</td><td>
+                                    <a href="$(link-advert)" target="hotspot_advert">Advertisement required</a></td>
+                                        </tr>
+                                    $(elif refresh-timeout)
+                                        <tr><td>Refresh</td><td>$(refresh-timeout)</td></tr>
+                                    $(endif)
+                                        </table>
+                                    $(if login-by-mac != 'yes')
+                                    <!-- user manager link. if user manager resides on other router, replace $(hostname) by its address
+                                    <button onclick="document.location='http://$(hostname)/user?subs='; return false;">status</button>
+                                    <!-- end of user manager link -->
+                                    <button type="submit" class="btn btn-danger">Logout</button>
+                                    $(endif)
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <p class="box-info">
+                Informasi Penerimaan Siswa & Santri Baru<br>
+                Tahun Pelajaran <span id="tp"></span>, Kunjungi Media Kami di:<br>
+                <a href="https://berbagi.link/sahabatmoeka" class="link" target="_blank">@sahabatmoeka</a><br>
+                <a href="http://ppdb.smkmuhkarangmojo.sch.id" target="_blank" class="link">www.ppdb.smkmuhkarangmojo.sch.id</a>
+            </p>
+            <div class="row">
+                <div class="col text-center">
+                    <img src="img/wifi.png" alt="Logo Wi-Fi" class="" width="40">
+                </div>
+            </div>
         </div>
     </section>
-    <p>
-        Informasi Penerimaan Siswa & Santri Baru<br>
-        Tahun Pelajaran <span id="tp"></span>, Kunjungi Media Kami di:<br>
-        <a href="https://berbagi.link/sahabatmoeka" class="link" target="_blank">@sahabatmoeka</a><br>
-        <a href="http://ppdb.smkmuhkarangmojo.sch.id" target="_blank" class="link">www.ppdb.smkmuhkarangmojo.sch.id</a>
-    </p>
-    <img src="img/wifi.png" alt="Logo Wi-Fi" class="wifi-logo" width="40">
 
-    <script src="jquery.min.js"></script>
-    <script src="script.js"></script>
+    <script src="js/jquery.min.js"></script>
+    <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
